<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.ags.annada.directory.employees.details.EmployeeDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/cardview_shadow_end_color"
            android:elevation="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/emp_details_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    app:imageUrl="@{viewmodel.item.avatar}"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/emp_details_firstName"
                    style="@style/defaultTextView"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@{viewmodel.item.firstName}"
                    android:textSize="38sp"
                    app:layout_constraintLeft_toRightOf="@+id/emp_details_image"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Maybell" />

                <TextView
                    android:id="@+id/emp_details_lastName"
                    style="@style/DetailsNameTextAppearance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@{viewmodel.item.lastName}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/emp_details_image"
                    tools:text="Durgan" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/email_label"
            style="@style/DetailsLabelTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/email_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_card_view" />

        <TextView
            android:id="@+id/emp_details_email"
            style="@style/DetailsGrayTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@{viewmodel.item.email}"
            app:layout_constraintLeft_toRightOf="@+id/email_label"
            app:layout_constraintTop_toBottomOf="@+id/profile_card_view"
            tools:text="Izaiah.Little@hotmail.com" />

        <TextView
            android:id="@+id/job_title_label"
            style="@style/DetailsLabelTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/job_title_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_label" />

        <TextView
            android:id="@+id/job_title"
            style="@style/DetailsGrayTextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@{viewmodel.item.jobTitle}"
            app:layout_constraintLeft_toRightOf="@+id/job_title_label"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emp_details_email"
            tools:text="Customer Markets Architect" />

        <TextView
            android:id="@+id/phone_label"
            style="@style/DetailsLabelTextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/phone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/job_title_label" />

        <TextView
            android:id="@+id/phone"
            style="@style/DetailsGrayTextAppearance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@{viewmodel.item.phone}"
            app:layout_constraintBaseline_toBaselineOf="@+id/phone_label"
            app:layout_constraintLeft_toRightOf="@+id/phone_label"
            tools:text="(927) 840-0095 x2527" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>